--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.2.1",
     "node-cron": "^4.2.1",
     "numeral": "^2.0.6",
+    "puppeteer": "^24.16.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.6"
   }
